compute at least inside cursorToX with floats

BUG: 499669